[package]
name = "texlight-language-server"
version = "0.0.0"
description = "pdf-LaTeX superset language-server wrapper thingy"
authors = ["jonas-kell"]
license = "MIT"
repository = "https://github.com/jonas-kell/texlight"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.5"

wasm-bindgen = "0.2"

chumsky = "0.9.3"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
im-rc = "15.0.0"
oxc_index = "0.36.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
rust-lapper = "1.1.0"